--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body{
     position: relative;
     transition: 1s ease;
     border-radius: 10px;
-    margin-top: 50px;
+    margin-top: 70px;
 
 }
 
@@ -121,7 +121,7 @@ body{
     }
 
     .cards{
-        border:2px solid rgb(53, 33, 15);
+/*         border:2px solid rgb(53, 33, 15); */
         /* width: 400px; */
         height: 350px;
         display: flex ;
@@ -141,7 +141,7 @@ body{
         /* padding: 0px 0px; */
         width: 100%;
         height: 300px;
-        border:2px solid rgb(53, 33, 15);
+/*         border:2px solid rgb(53, 33, 15); */
         border-top-left-radius: 10px;
         border-top-right-radius: 10px;
         
@@ -157,7 +157,7 @@ body{
         width: 93%;
         /* height: 100px; */
         background-color: bisque;
-        border:2px solid rgb(53, 33, 15);
+/*         border:2px solid rgb(53, 33, 15); */
         border-bottom-left-radius: 10px;
         border-bottom-right-radius: 10px;
     
